about us, consultation, home page update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    
     <script src="owlcarousel/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <title>Private Psychology Clinic Template</title>
@@ -26,19 +25,27 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav menu">
             <li class="nav-item menu-item">
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-link" href="about-us.html">About us</a>
+            </li>
+            <li class="nav-item dropdown menu-item">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Services</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="services/consultation.html">Consultation</a>
+                    <a class="dropdown-item" href="services/adult-psychotherapy.html">Adult Psychotherapy</a>
+                    <a class="dropdown-item" href="services/child-psychotherapy.html">Child Psychotherapy</a>
+                    <a class="dropdown-item" href="services/couple-therapy.html">Couple Therapy</a>
+                    <a class="dropdown-item" href="services/sport-psychology.html">Sport Psychology</a>
+                    <a class="dropdown-item" href="services/psychiatry.html">Psychiatry</a>
+                </div>
             </li>
             <li class="nav-item menu-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="fees.html">Fees</a>
             </li>
             <li class="nav-item menu-item">
-                <a class="nav-link" href="#">Fees</a>
+                <a class="nav-link" href="faq-html">FAQ</a>
             </li>
             <li class="nav-item menu-item">
-                <a class="nav-link" href="#">FAQ</a>
-            </li>
-            <li class="nav-item menu-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
         </ul> 
         </div>
@@ -46,7 +53,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col">
+            <div class="column">
                 <div id="quotes" class="carousel slide" data-ride="carousel" data-interval="4000">
                     <ul class="carousel-indicators">
                         <li data-target="#quotes" data-slide-to="0" class="active"></li>
@@ -94,27 +101,27 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="column">
                 <div class="jumbotron text-center">
-                    <h1>Private Psychology Clinic</h1>
+                    <h1 class="main-title">Private Psychology Clinic SomeName</h1>
                     <p>Short beginning text about clinic and services. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id volutpat lacus laoreet non curabitur gravida arcu ac tortor. Sed libero enim sed faucibus. Ac ut consequat semper viverra nam libero justo laoreet. Habitant morbi tristique senectus et netus et malesuada. Phasellus faucibus scelerisque eleifend donec pretium vulputate. At lectus urna duis convallis convallis.</p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <h2 class="text-center">Therapists</div>
+                <h2 class="section-title">Therapists</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col" style="overflow: hidden">
+            <div class="column" style="overflow: hidden">
                 <div class="owl-carousel owl-theme">
                     <div class="item card"> 
                         <img class="card-img-top" src="images/psychologist1.jpg" alt="Psychologist">
                         <div class="card-body">
                             <h4 class="card-title">Jane Doe</h4>
                             <p class="card-text">CBT Therapist, Couple Therapist</p>
-                            <a href="#" class="btn btn-info">See Profile</a>
+                            <a href="about-us.html#staff1" class="btn btn-info stretched-link">See Profile</a>
                         </div>
                     </div>
                     <div class="item card"> 
@@ -122,7 +129,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Jane Doe</h4>
                             <p class="card-text">Psychodynamic Therapist</p>
-                            <a href="#" class="btn btn-info">See Profile</a>
+                            <a href="about-us.html#staff2" class="btn btn-info stretched-link">See Profile</a>
                         </div>
                     </div>
                     <div class="item card"> 
@@ -130,7 +137,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Jane Doe</h4>
                             <p class="card-text">CBT Therapist, Child Therapist</p>
-                            <a href="#" class="btn btn-info">See Profile</a>
+                            <a href="about-us.html#staff3" class="btn btn-info stretched-link">See Profile</a>
                         </div>
                     </div>
                     <div class="item card"> 
@@ -138,7 +145,7 @@
                         <div class="card-body">
                             <h4 class="card-title">John Doe</h4>
                             <p class="card-text">CBT Therapist</p>
-                            <a href="#" class="btn btn-info">See Profile</a>
+                            <a href="about-us.html#staff4" class="btn btn-info stretched-link">See Profile</a>
                         </div>
                     </div>
                     <div class="item card"> 
@@ -146,7 +153,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Jane Doe</h4>
                             <p class="card-text">Psychiatrist</p>
-                            <a href="#" class="btn btn-info">See Profile</a>
+                            <a href="about-us.html#staff5" class="btn btn-info stretched-link">See Profile</a>
                         </div>
                     </div>
                     <div class="item card"> 
@@ -154,7 +161,7 @@
                         <div class="card-body">
                             <h4 class="card-title">John Doe</h4>
                             <p class="card-text">Sport Psychologist</p>
-                            <a href="#" class="btn btn-info">See Profile</a>
+                            <a href="about-us.html#staff6" class="btn btn-info stretched-link">See Profile</a>
                         </div>
                     </div>
                 </div>
@@ -162,11 +169,11 @@
         </div>
         <div class="row">
             <div class="col">
-                <h2 class="text-center">Services</div>
+                <h2 class="section-title">Services</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="column">
                 <div class="card-columns card-margin">
                 <div class="card bg-info text-white">
                     <div class="card-body">
@@ -209,11 +216,11 @@
         </div>
         <div class="row">
             <div class="col">
-                <h2 class="text-center">Contact</div>
+                <h2 class="section-title">Contact</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="column">
                 <div class="text-center">
                     <p>Private Psychology Clinic SomeName</p>
                     <p>807 Stonybrook Dr. Brooklyn, NY 11229</p>
@@ -230,6 +237,7 @@
                 </div>
             </div>
         </footer>
+    
     </div>
 
 </body>
