services, fees, faq, contact and other changes

--- a/fees.html
+++ b/fees.html
@@ -16,7 +16,7 @@
     <script src="owlcarousel/owl.carousel.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 
-    <title>About us - Private Psychology Clinic Template</title>
+    <title>Fees - Private Psychology Clinic Template</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav menu">
-            <li class="nav-item menu-item active-item">
+            <li class="nav-item menu-item">
                 <a class="nav-link" href="about-us.html">About us</a>
             </li>
             <li class="nav-item dropdown menu-item">
@@ -41,7 +41,7 @@
                     <a class="dropdown-item" href="services/psychiatry.html">Psychiatry</a>
                 </div>
             </li>
-            <li class="nav-item menu-item">
+            <li class="nav-item menu-item active-item">
                 <a class="nav-link" href="fees.html">Fees</a>
             </li>
             <li class="nav-item menu-item">
@@ -104,76 +104,50 @@
             </div>
         </div>
         <div class="row">
-            <div class="column">
-                <div class="jumbotron text-center">
-                    <h1 class="main-title">About us</h1>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Tortor consequat id porta nibh venenatis cras sed felis eget. Quis risus sed vulputate odio ut enim. At consectetur lorem donec massa sapien faucibus et. Suspendisse in est ante in nibh mauris cursus mattis molestie. Nunc lobortis mattis aliquam faucibus purus in massa tempor nec. Sed sed risus pretium quam vulputate dignissim suspendisse in.</p>
-                </div>
+            <div class="col">
+                <h1 class="main-title text-center">Fees</h1>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <h2 class="section-title">Therapists</h2>
-            </div>
-        </div>
-        <div class="row about-staff">
-            <div class="col-md-3">
-                <img src="images/psychologist1.jpg" alt="Psychologist" class="img-staff">
-            </div>
-            <div class="col-md-9">
-                <h3><a name="staff1">Jane Doe</a></h3>
-                <h4 class="staff-title">CBT Therapist, Couple Therapist</h4>
-                <p>Suspendisse ultrices gravida dictum fusce ut. Sed arcu non odio euismod lacinia at quis risus sed. Sed cras ornare arcu dui vivamus arcu felis. Lorem ipsum dolor sit amet consectetur adipiscing elit ut aliquam. In est ante in nibh. Amet facilisis magna etiam tempor orci eu lobortis. Arcu bibendum at varius vel. Dignissim convallis aenean et tortor at risus. Duis tristique sollicitudin nibh sit. Aliquet sagittis id consectetur purus ut faucibus. </p>
-            </div>
-        </div>
-        <div class="row about-staff">
-            <div class="col-md-3">
-                <img src="images/psychologist2.jpg" alt="Psychologist" class="img-staff">
-            </div>
-            <div class="col-md-9">
-                <h3><a name="staff2">Jane Doe</a></h3>
-                <h4 class="staff-title">Psychodynamic Therapist</h4>
-                <p>Fermentum iaculis eu non diam phasellus vestibulum lorem sed risus. Nisl nunc mi ipsum faucibus. Ipsum dolor sit amet consectetur. Id nibh tortor id aliquet lectus proin. A condimentum vitae sapien pellentesque habitant morbi tristique senectus. Tellus at urna condimentum mattis pellentesque id nibh tortor. Aenean et tortor at risus viverra adipiscing. Sollicitudin ac orci phasellus egestas tellus. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. At volutpat diam ut venenatis tellus in metus vulputate. </p>
-            </div>
-        </div>
-        <div class="row about-staff">
-            <div class="col-md-3">
-                <img src="images/psychologist3.jpg" alt="Psychologist" class="img-staff">
-            </div>
-            <div class="col-md-9">
-                <h3><a name="staff3">Jane Doe</a></h3>
-                <h4 class="staff-title">CBT Therapist, Child Therapist</h4>
-                <p>Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque. Eget dolor morbi non arcu risus quis varius quam quisque. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget. Risus nec feugiat in fermentum. Semper auctor neque vitae tempus quam pellentesque. Fames ac turpis egestas integer eget aliquet nibh.</p>
-            </div>
-        </div>
-        <div class="row about-staff">
-            <div class="col-md-3">
-                <img src="images/psychologist4.jpg" alt="Psychologist" class="img-staff">
-            </div>
-            <div class="col-md-9">
-                <h3><a name="staff4">John Doe</a></h3>
-                <h4 class="staff-title">CBT Therapist</h4>
-                <p>At consectetur lorem donec massa sapien faucibus et. Suspendisse in est ante in nibh mauris cursus mattis molestie. Augue lacus viverra vitae congue eu consequat ac felis donec. Viverra suspendisse potenti nullam ac tortor vitae. Vulputate dignissim suspendisse in est ante in. Tempus quam pellentesque nec nam aliquam. Nunc lobortis mattis aliquam faucibus purus in massa tempor nec. Sed sed risus pretium quam vulputate dignissim suspendisse in.</p>
-            </div>
-        </div>
-        <div class="row about-staff">
-            <div class="col-md-3">
-                <img src="images/psychologist5.jpg" alt="Psychologist" class="img-staff">
-            </div>
-            <div class="col-md-9">
-                <h3><a name="staff5">Jane Doe</a></h3>
-                <h4 class="staff-title">Psychiatrist</h4>
-                <p>Scelerisque mauris pellentesque pulvinar pellentesque. Et egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Vestibulum sed arcu non odio. Quisque sagittis purus sit amet volutpat consequat. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Tortor vitae purus faucibus ornare. Pharetra massa massa ultricies mi quis hendrerit dolor magna eget. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Dignissim sodales ut eu sem integer vitae justo eget.</p>
-            </div>
-        </div>
-        <div class="row about-staff">
-            <div class="col-md-3">
-                <img src="images/psychologist6.jpg" alt="Psychologist" class="img-staff">
-            </div>
-            <div class="col-md-9">
-                <h3><a name="staff6">John Doe</a></h3>
-                <h4 class="staff-title">Sport Psychologist</h4>
-                <p>Cursus euismod quis viverra nibh cras pulvinar. Nunc vel risus commodo viverra maecenas. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Pharetra magna ac placerat vestibulum lectus mauris ultrices eros in. Amet massa vitae tortor condimentum lacinia quis. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Nunc aliquet bibendum enim facilisis gravida neque convallis a. Maecenas volutpat blandit aliquam etiam erat. Ante in nibh mauris cursus mattis. </p>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Service</th>
+                            <th>Fee</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Service 1 Lorem ipsum</td>
+                            <td>xx $</td>
+                        </tr>
+                        <tr>
+                            <td>Service 2 dolor sit</td>
+                            <td>xx $</td>
+                        </tr>
+                        <tr>
+                            <td>Service 3 amet</td>
+                            <td>xx $</td>
+                        </tr>
+                        <tr>
+                            <td>Service 4 consectetur</td>
+                            <td>xx $</td>
+                        </tr>
+                        <tr>
+                            <td>Service 5 adipiscing</td>
+                            <td>xx $</td>
+                        </tr>
+                        <tr>
+                            <td>Service 6 elit, sed</td>
+                            <td>xx $</td>
+                        </tr>
+                        <tr>
+                            <td>Service 7 do eiusmod tempor</td>
+                            <td>xx $</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
