--- a/services/child-psychotherapy.html
+++ b/services/child-psychotherapy.html
@@ -16,7 +16,7 @@
     <script src="../owlcarousel/owl.carousel.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="../favicon.png">
 
-    <title>Consultation - Private Psychology Clinic Template</title>
+    <title>Child Psychotherapy - Private Psychology Clinic Template</title>
 </head>
 
 <body>
@@ -105,7 +105,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <h1 class="main-title text-center">Psychology Consultation</h1>
+                <h1 class="main-title text-center">Child Psychotherapy</h1>
             </div>
         </div>
         <div class="row row-margin">
