--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Short text, about 100-160 characters, summarizing this site.">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+
     <title>Private Psychology Clinic Template</title>
 </head>
 
@@ -42,7 +45,7 @@
                 <a class="nav-link" href="fees.html">Fees</a>
             </li>
             <li class="nav-item menu-item">
-                <a class="nav-link" href="faq-html">FAQ</a>
+                <a class="nav-link" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item menu-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -176,39 +179,39 @@
             <div class="column">
                 <div class="card-columns card-margin">
                 <div class="card bg-info text-white">
-                    <div class="card-body">
+                    <div class="card-body services"><a href="services/consultation.html" class="services-link">
                         <h3 class="card-title"><i class="fas fa-comments"></i> Consultation</h3>
-                        <p class="card-text">Short text about consultation and when you can need it. At lectus urna duis convallis convallis. Ac placerat vestibulum lectus mauris ultrices eros in cursus. Auctor augue mauris augue neque.</p>
+                        <p class="card-text">Short text about consultation and when you can need it. At lectus urna duis convallis convallis. Ac placerat vestibulum lectus mauris ultrices eros in cursus. Auctor augue mauris augue neque.</p></a>
                     </div>
                 </div>
                 <div class="card bg-info text-white">
-                    <div class="card-body">
+                    <div class="card-body services"><a href="services/adult-psychotherapy.html" class="services-link">
                         <h3 class="card-title"><i class="fas fa-male"></i> Adult Psychotherapy</h3>
-                        <p class="card-text">Short text about adult psychotherapy and what disorders we can treat. Pharetra pharetra massa massa ultricies.</p>
+                        <p class="card-text">Short text about adult psychotherapy and what disorders we can treat. Pharetra pharetra massa massa ultricies.</p></a>
                     </div>
                 </div>
                 <div class="card bg-info text-white">
-                    <div class="card-body">
+                    <div class="card-body services"><a href="services/child-psychotherapy.html" class="services-link">
                         <h3 class="card-title"><i class="fas fa-child"></i> Child Psychotherapy</h3>
-                        <p class="card-text">Short text about child psychotherapy and what disorders we can treat. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Neque vitae tempus quam pellentesque. </p>
+                        <p class="card-text">Short text about child psychotherapy and what disorders we can treat. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Neque vitae tempus quam pellentesque. </p></a>
                     </div>
                 </div>
                 <div class="card bg-info text-white">
-                    <div class="card-body">
+                    <div class="card-body services"><a href="services/couple-therapy.html" class="services-link">
                         <h3 class="card-title"><i class="fas fa-user-friends"></i> Couple Therapy</h3>
-                        <p class="card-text">Short text about couple therapy and when you can need it. A diam maecenas sed enim ut sem. Arcu odio ut sem nulla pharetra diam sit amet.</p>
+                        <p class="card-text">Short text about couple therapy and when you can need it. A diam maecenas sed enim ut sem. Arcu odio ut sem nulla pharetra diam sit amet.</p></a>
                     </div>
                 </div>
                 <div class="card bg-info text-white">
-                    <div class="card-body">
+                    <div class="card-body services"><a href="services/sport-psychology.html" class="services-link">
                         <h3 class="card-title"><i class="fas fa-running"></i> Sport Psychology</h3>
-                        <p class="card-text">Short text about sport psychology and who can need it. Ac ut consequat semper viverra nam libero justo laoreet.</p>
+                        <p class="card-text">Short text about sport psychology and who can need it. Ac ut consequat semper viverra nam libero justo laoreet.</p></a>
                     </div>
                 </div>
                 <div class="card bg-info text-white">
-                    <div class="card-body">
+                    <div class="card-body services"><a href="services/psychiatry.html" class="services-link">
                         <h3 class="card-title"><i class="fas fa-clinic-medical"></i> Psychiatry</h3>
-                        <p class="card-text">Short text about psychiatry and what disorders we can treat. Habitant morbi tristique senectus et netus et malesuada. Phasellus faucibus scelerisque eleifend donec pretium vulputate.</p>
+                        <p class="card-text">Short text about psychiatry and what disorders we can treat. Habitant morbi tristique senectus et netus et malesuada. Phasellus faucibus scelerisque eleifend donec pretium vulputate.</p></a>
                     </div>
                 </div>
             </div>
@@ -232,8 +235,10 @@
         </div>
         <footer class="row">
             <div class="col">
-                <div class="text-center">
-                    <p>&copy; <span id="currentYear"></span> Private Psychology Clinic SomeName All Rights Reserved</p>
+                <div class="text-left">
+                    <p>&copy; <span id="currentYear"></span> Private Psychology Clinic SomeName All Rights Reserved
+                        <span class="social-icons"><a href="https://www.facebook.com/" target="_blank" title="Facebook"><i class="fab fa-facebook fa-2x"></i></a> <a href="https://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram fa-2x"></i></a> <a href="https://www.twitter.com/" target="_blank" title="Twitter"><i class="fab fa-twitter fa-2x"></i></a></span>
+                    </p>
                 </div>
             </div>
         </footer>
