slidebox and other changes

--- a/about-us.html
+++ b/about-us.html
@@ -14,6 +14,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script>
+    <script src="jquery.slideBox.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 
     <title>About us - Private Psychology Clinic Template</title>
@@ -156,7 +158,7 @@
                 <p>At consectetur lorem donec massa sapien faucibus et. Suspendisse in est ante in nibh mauris cursus mattis molestie. Augue lacus viverra vitae congue eu consequat ac felis donec. Viverra suspendisse potenti nullam ac tortor vitae. Vulputate dignissim suspendisse in est ante in. Tempus quam pellentesque nec nam aliquam. Nunc lobortis mattis aliquam faucibus purus in massa tempor nec. Sed sed risus pretium quam vulputate dignissim suspendisse in.</p>
             </div>
         </div>
-        <div class="row about-staff">
+        <div class="row about-staff" id="slidebox-here">
             <div class="col-md-3">
                 <img src="images/psychologist5.jpg" alt="Psychologist" class="img-staff">
             </div>
@@ -175,6 +177,13 @@
                 <h4 class="staff-title">Sport Psychologist</h4>
                 <p>Cursus euismod quis viverra nibh cras pulvinar. Nunc vel risus commodo viverra maecenas. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Pharetra magna ac placerat vestibulum lectus mauris ultrices eros in. Amet massa vitae tortor condimentum lacinia quis. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Nunc aliquet bibendum enim facilisis gravida neque convallis a. Maecenas volutpat blandit aliquam etiam erat. Ante in nibh mauris cursus mattis. </p>
             </div>
+        </div>
+
+        <div id="slidebox">
+            <div id="close"><i class="fas fa-times"></i></div>
+            <p class="questions">Questions <i class="far fa-question-circle fa-lg question-icon"></i></p>
+            <p class="text-center call-text"><a href="tel: 202-505-0122"><img src="images/call.png" alt="call icon" class="call-icon"></a>Call us now!</p>
+            <p class="text-center call-text"><a href="tel: 202-505-0122">202-505-0122</a></p>
         </div>
 
         <footer class="row">
