--- a/faq.html
+++ b/faq.html
@@ -14,6 +14,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script>
+    <script src="jquery.slideBox.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 
     <title>FAQ - Private Psychology Clinic Template</title>
@@ -171,7 +173,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" id="slidebox-here">
                         <div class="card-header">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseSix">
                             Ut tellus elementum sagittis vitae?
@@ -197,6 +199,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div id="slidebox">
+            <div id="close"><i class="fas fa-times"></i></div>
+            <p class="questions">Questions <i class="far fa-question-circle fa-lg question-icon"></i></p>
+            <p class="text-center call-text"><a href="tel: 202-505-0122"><img src="images/call.png" alt="call icon" class="call-icon"></a>Call us now!</p>
+            <p class="text-center call-text"><a href="tel: 202-505-0122">202-505-0122</a></p>
         </div>
 
         <footer class="row">
