--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Short text, about 100-160 characters, summarizing this site.">
+    <meta property="og:title" content="Private Psychology Clinic Template" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://majakochanowska.github.io/psych-template/" />
+    <meta property="og:image" content="https://majakochanowska.github.io/psych-template/images/og-image.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
