HTML improvements for better accessibility

--- a/fees.html
+++ b/fees.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+    <header>
     <nav class="navbar navbar-expand-sm bg-light">
         <a class="navbar-brand" href="index.html"><img src="images/group.png" alt="logo" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -105,12 +106,16 @@
                 </div>
             </div>
         </div>
+    </div>
+    </header>
+
+    <main class="container-fluid">
         <div class="row">
             <div class="col">
                 <h1 class="main-title text-center">Fees</h1>
             </div>
         </div>
-        <div class="row">
+        <section class="row">
             <div class="col">
                 <table>
                     <thead>
@@ -151,16 +156,18 @@
                     </tbody>
                 </table>
             </div>
-        </div>
+        </section>
 
-        <div id="slidebox">
+        <aside id="slidebox">
             <div id="close"><i class="fas fa-times"></i></div>
             <p class="questions">Questions <i class="far fa-question-circle fa-lg question-icon"></i></p>
             <p class="text-center call-text"><a href="tel: 202-505-0122"><img src="images/call.png" alt="call icon" class="call-icon"></a>Call us now!</p>
             <p class="text-center call-text"><a href="tel: 202-505-0122">202-505-0122</a></p>
-        </div>
+        </aside>
+    </main>
 
-        <footer class="row">
+    <footer class="container-fluid">
+        <div class="row">
             <div class="col">
                 <div class="text-left">
                     <p>&copy; <span id="currentYear"></span> Private Psychology Clinic SomeName All Rights Reserved
@@ -168,9 +175,8 @@
                     </p>
                 </div>
             </div>
-        </footer>
-    
-    </div>
+        </div>
+    </footer>
 
 </body>
 
