--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <header>
     <nav class="navbar navbar-expand-sm bg-light">
         <a class="navbar-brand" href="index.html"><img src="images/group.png" alt="logo" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -103,24 +104,30 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+    </div>
+    </header>
+    
+    <main class="container-fluid">
+        <header class="row">
             <div class="col">
                 <h1 class="main-title text-center">Contact</h1>
             </div>
-        </div>
+        </header>
         <div class="row">
             <div class="column">
-                <div class="text-center">
+                <address class="text-center">
                     <p>Private Psychology Clinic SomeName</p>
                     <p>807 Stonybrook Dr. Brooklyn, NY 11229</p>
                     <p><i class="fas fa-mobile-alt"></i> 202-555-0122</p>
                     <p><i class="fas fa-at"></i> <a href="mailto: &#105;&#110;&#102;&#111;&#064;&#101;&#120;&#097;&#109;&#112;&#108;&#101;&#046;&#099;&#111;&#109;">&#105;&#110;&#102;&#111;&#064;&#101;&#120;&#097;&#109;&#112;&#108;&#101;&#046;&#099;&#111;&#109;</a></p>
-                </div>
+                </address>
                 <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-74.0226173400879%2C40.667879144351105%2C-73.89112472534181%2C40.742184818893364&amp;layer=mapnik&amp;marker=40.705042344385426%2C-73.95687103271484" style="border: 1px solid #777"></iframe>
             </div>
         </div>
+    </main>
 
-        <footer class="row">
+    <footer class="container-fluid">
+        <div class="row">
             <div class="col">
                 <div class="text-left">
                     <p>&copy; <span id="currentYear"></span> Private Psychology Clinic SomeName All Rights Reserved
@@ -128,9 +135,8 @@
                     </p>
                 </div>
             </div>
-        </footer>
-    
-    </div>
+        </div>
+    </footer>
 
 </body>
 
