--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <header>
     <nav class="navbar navbar-expand-sm bg-light">
         <a class="navbar-brand" href="#"><img src="images/group.png" alt="logo" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -107,14 +108,20 @@
                 </div>
             </div>
         </div>
+    </div>
+    </header>
+
+    <main class="container-fluid">
         <div class="row">
             <div class="column">
-                <div class="jumbotron text-center">
+                <header class="jumbotron text-center">
                     <h1 class="main-title">Private Psychology Clinic SomeName</h1>
                     <p>Short beginning text about clinic and services. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id volutpat lacus laoreet non curabitur gravida arcu ac tortor. Sed libero enim sed faucibus. Ac ut consequat semper viverra nam libero justo laoreet. Habitant morbi tristique senectus et netus et malesuada. Phasellus faucibus scelerisque eleifend donec pretium vulputate. At lectus urna duis convallis convallis.</p>
-                </div>
+                </header>
             </div>
         </div>
+
+        <section>
         <div class="row">
             <div class="col">
                 <h2 class="section-title">Therapists</h2>
@@ -124,7 +131,7 @@
             <div class="column" style="overflow: hidden">
                 <div class="owl-carousel owl-theme">
                     <div class="item card"> 
-                        <img class="card-img-top" src="images/psychologist1.jpg" alt="Psychologist">
+                        <img class="card-img-top" src="images/psychologist1.jpg" alt="Jane Doe">
                         <div class="card-body">
                             <h4 class="card-title">Jane Doe</h4>
                             <p class="card-text">CBT Therapist, Couple Therapist</p>
@@ -132,7 +139,7 @@
                         </div>
                     </div>
                     <div class="item card"> 
-                        <img class="card-img-top" src="images/psychologist2.jpg" alt="Psychologist">
+                        <img class="card-img-top" src="images/psychologist2.jpg" alt="Jane Doe">
                         <div class="card-body">
                             <h4 class="card-title">Jane Doe</h4>
                             <p class="card-text">Psychodynamic Therapist</p>
@@ -140,7 +147,7 @@
                         </div>
                     </div>
                     <div class="item card"> 
-                        <img class="card-img-top" src="images/psychologist3.jpg" alt="Psychologist">
+                        <img class="card-img-top" src="images/psychologist3.jpg" alt="Jane Doe">
                         <div class="card-body">
                             <h4 class="card-title">Jane Doe</h4>
                             <p class="card-text">CBT Therapist, Child Therapist</p>
@@ -148,7 +155,7 @@
                         </div>
                     </div>
                     <div class="item card"> 
-                        <img class="card-img-top" src="images/psychologist4.jpg" alt="Psychologist">
+                        <img class="card-img-top" src="images/psychologist4.jpg" alt="John Doe">
                         <div class="card-body">
                             <h4 class="card-title">John Doe</h4>
                             <p class="card-text">CBT Therapist</p>
@@ -156,7 +163,7 @@
                         </div>
                     </div>
                     <div class="item card"> 
-                        <img class="card-img-top" src="images/psychologist5.jpg" alt="Psychologist">
+                        <img class="card-img-top" src="images/psychologist5.jpg" alt="Jane Doe">
                         <div class="card-body">
                             <h4 class="card-title">Jane Doe</h4>
                             <p class="card-text">Psychiatrist</p>
@@ -164,7 +171,7 @@
                         </div>
                     </div>
                     <div class="item card"> 
-                        <img class="card-img-top" src="images/psychologist6.jpg" alt="Psychologist">
+                        <img class="card-img-top" src="images/psychologist6.jpg" alt="John Doe">
                         <div class="card-body">
                             <h4 class="card-title">John Doe</h4>
                             <p class="card-text">Sport Psychologist</p>
@@ -174,6 +181,9 @@
                 </div>
             </div>
         </div>
+        </section>
+
+        <section>
         <div class="row">
             <div class="col">
                 <h2 class="section-title">Services</h2>
@@ -221,6 +231,9 @@
             </div>
             </div>
         </div>
+        </section>
+
+        <section>
         <div class="row">
             <div class="col">
                 <h2 class="section-title">Contact</h2>
@@ -228,16 +241,20 @@
         </div>
         <div class="row">
             <div class="column">
-                <div class="text-center">
+                <address class="text-center">
                     <p>Private Psychology Clinic SomeName</p>
                     <p>807 Stonybrook Dr. Brooklyn, NY 11229</p>
                     <p><i class="fas fa-mobile-alt"></i> 202-555-0122</p>
                     <p><i class="fas fa-at"></i> <a href="mailto: &#105;&#110;&#102;&#111;&#064;&#101;&#120;&#097;&#109;&#112;&#108;&#101;&#046;&#099;&#111;&#109;">&#105;&#110;&#102;&#111;&#064;&#101;&#120;&#097;&#109;&#112;&#108;&#101;&#046;&#099;&#111;&#109;</a></p>
-                </div>
+                </address>
                 <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-74.0226173400879%2C40.667879144351105%2C-73.89112472534181%2C40.742184818893364&amp;layer=mapnik&amp;marker=40.705042344385426%2C-73.95687103271484" style="border: 1px solid #777"></iframe>
             </div>
         </div>
-        <footer class="row">
+        </section>
+    </main>
+
+    <footer class="container-fluid">
+        <div class="row">
             <div class="col">
                 <div class="text-left">
                     <p>&copy; <span id="currentYear"></span> Private Psychology Clinic SomeName All Rights Reserved
@@ -245,9 +262,8 @@
                     </p>
                 </div>
             </div>
-        </footer>
-    
-    </div>
+        </div>
+    </footer>
 
 </body>
 
